# protobuf-minimal

./: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  message.proto
