PROJECT(rpc)
CMAKE_MINIMUM_REQUIRED (VERSION 3.0.0)
SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -std=c++17 -Wnull-dereference")
set(PROTO_FILE ${CMAKE_CURRENT_SOURCE_DIR}/proto/message.proto)

find_package(Protobuf REQUIRED)

ADD_SUBDIRECTORY(proto)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${Protobuf_INCLUDE_DIRS})
ADD_EXECUTABLE(main main.cpp ${PROTO_FILE})

protobuf_generate(TARGET main
    IMPORT_DIRS ${CMAKE_CURRENT_SOURCE_DIR}
    APPEND_PATH
    PROTOC_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR})

TARGET_LINK_LIBRARIES(main proto ${Protobuf_LIBRARIES})
